--- a/seq_tag_ner_k8s/fluid_pserver.yaml
+++ b/seq_tag_ner_k8s/fluid_pserver.yaml
@@ -3,8 +3,8 @@ kind: Job
 metadata:
   name: seq-tag-ner-pserver
 spec:
-  parallelism: 4
-  completions: 4
+  parallelism: 1
+  completions: 1
   template:
     metadata:
       labels:
@@ -21,15 +21,14 @@ spec:
       containers:
       - name: pserver
         #image: "registry.baidu.com/paddlepaddle/fluid_benchmark:gpu"
-        #image: "bootstrapper:5000/fluid_benchmark:gpu"
-        image: "bootstrapper:5000/yancey1989/fluid_benchmakr:gpu"
+        image: "bootstrapper:5000/fluid_benchmark:gpu"
         imagePullPolicy: Always
         volumeMounts:
           - mountPath: /usr/local/nvidia/lib64
             name: nvidia-driver
         ports:
-        - name: jobport-30256
-          containerPort: 30256
+        - name: jobport-30258
+          containerPort: 30258
         env:
         - name: PADDLE_JOB_NAME
           value: seq-tag-ner
@@ -38,23 +37,25 @@ spec:
         - name: TRAINING_ROLE
           value: "PSERVER"
         - name: TRAINERS
-          value: "4"
+          value: "1"
         - name: PSERVERS
-          value: "4"
+          value: "1"
         - name: TOPOLOGY
           value: ""
         - name: GLOG_v
           value: "2"
         - name: GLOG_logtostderr
           value: "1"
+        - name: LOCAL
+          value: "FALSE"
+        - name: BATCH_SIZE
+          value: "200"
         - name: ENTRY
-          #value: "unset http_proxy && unset https_proxy && python /workspace/vgg16_fluid.py --local 0 --data_set flowers --batch_size 20 --device CPU"
-          #value: "unset http_proxy && unset https_proxy && python /workspace/text_fluid.py --local 0 --dict_path /workspace/aclImdb/imdb.vocab"
           value: "unset http_proxy && unset https_proxy && cd /workspace/seq_tag_ner && python train.py"
         - name: TRAINER_PACKAGE
           value: "/workspace"
         - name: PADDLE_INIT_PORT
-          value: "30256"
+          value: "30258"
         - name: PADDLE_INIT_NICS
           value: "eth2"
         - name: PADDLE_INIT_TRAINER_COUNT
@@ -64,7 +65,7 @@ spec:
         - name: PADDLE_INIT_PORTS_NUM_FOR_SPARSE
           value: "1"
         - name: PADDLE_INIT_NUM_GRADIENT_SERVERS
-          value: "4"
+          value: "1"
         - name: PADDLE_INIT_NUM_PASSES
           value: "1"
         - name: PADDLE_INIT_USE_GPU
